--- a/Samples/2.0/Tutorials/Tutorial01_Initialization/CMakeLists.txt
+++ b/Samples/2.0/Tutorials/Tutorial01_Initialization/CMakeLists.txt
@@ -16,13 +16,17 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_recursive( ./ SOURCE_FILES )
 
 set( TUTORIAL_RESOURCES ${SAMPLE_COMMON_BASIC_RESOURCES} )
-if( APPLE )
+if(OGRE_BUILD_PLATFORM_APPLE_IOS)
 	set( TUTORIAL_RESOURCES ${SAMPLE_COMMON_BASIC_RESOURCES}
 		 ${CMAKE_CURRENT_SOURCE_DIR}/iOS/Tutorial.storyboard )
 	set( SOURCE_FILES ${SOURCE_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/iOS/TutorialViewController.mm )
 endif()
 
-ogre_add_executable(Sample_Tutorial01_Initialization WIN32 MACOSX_BUNDLE ${SOURCE_FILES} ${TUTORIAL_RESOURCES} )
+if( OGRE_BUILD_SAMPLES_AS_BUNDLES )
+    ogre_add_executable(Sample_Tutorial01_Initialization WIN32 MACOSX_BUNDLE ${SOURCE_FILES} ${TUTORIAL_RESOURCES} )
+else()
+    ogre_add_executable(Sample_Tutorial01_Initialization WIN32 ${SOURCE_FILES} ${TUTORIAL_RESOURCES} )
+endif()
 
 target_link_libraries(Sample_Tutorial01_Initialization ${OGRE_LIBRARIES} ${OGRE_SAMPLES_LIBRARIES})
 ogre_config_sample_lib(Sample_Tutorial01_Initialization)
